# ataxx-tools

./: README.md  protocol.md  viewer-specs.md
agent/doofus/: CMakeLists.txt
agent/doofus/include/: AnsiColors.h  Board.h  Config.h  Constants.h  Log.h  Move.h  MoveGen.h  RandomAgent.h  Util.h
agent/doofus/src/: AnsiColors.cpp  Board.cpp  Log.cpp  Move.cpp  MoveGen.cpp  RandomAgent.cpp  Util.cpp  main.cpp
agent/echo/: echo
agent/error/: error
agent/greedy/: greedy  greedy.cpp
agent/hang/: hang
agent/silent/: silent  silent.cpp
agent/simpleton/: simpleton  simpleton.cpp
arbiter/: Config.php  README.md  selfplay.sh  tournament.php  tournament.sh
arbiter/lib/: AnsiColors.php  Args.php  AtaxxException.php  Board.php  Core.php  Fixtures.php  Game.php  GameInfo.php  Interactor.php  Log.php  Move.php  Output.php  Player.php  Saver.php  Str.php  Tournament.php  TurnInfo.php  Util.php
